Added mcp-server to StarStop

--- a/star-stop/app.json
+++ b/star-stop/app.json
@@ -44,5 +44,11 @@
       "typedRoutes": true,
       "reactCompiler": true
     }
+  },
+  "servers": {
+    "Figma Desktop": {
+      "type": "http",
+      "url": "http://127.0.0.1:3845/mcp"
+    }
   }
 }
